[package]
name = "clearmesh-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/clearmeshhq/clearmesh-core"

[dependencies]
anyhow = "1"
blake3 = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
